# ruslamOS

./: Cargo.toml  README.md  makefile
boot/: Cargo.toml  boot.ld  bootsector.asm  build.sh  font.asm  i686-boot.json  makefile  stage2.asm  vbe_structure.asm
boot/asm/: bootsector.asm  loader.asm  stage2.asm  vbe_structure.asm
boot/ata/: ata.asm
boot/src/: ata.rs  io.rs  main.rs  phys.rs  vga_text.rs  virt.rs  virt_mem_manager.rs
kernel/: i686-kernel.json  kernel.ld
kernel/src/: kstart.asm  loader.asm  main.rs
kernel/src/arch/: mod.rs
kernel/src/arch/i686/: mod.rs  pic.rs
kernel/src/arch/i686/interrupt/: idt.rs  interrupts.rs  isrs.asm  isrs_func.rs  mod.rs
kernel/src/arch/mem/: virt.rs
kernel/src/sys/: mod.rs  shell.rs
kernel/src/sys/drivers/: mod.rs  vesa.rs  vga_text.rs
kernel/src/utils/: font.rs  io.rs  mod.rs
